add restart button

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
     <br>
     <button id="subUp">Submit</button>
     <div id="notHigh"></div>
+    <button type="button" id="restart">Try Again</button>
 
   </div>
    <script src="./assets/js/script.js"></script>
